test/parser/prs/echo-02.stderr
At: "echo-02.hac":7:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(process-prototype) [5:1..32]
#STATE#	{ [5:34]
#STATE#	keyword: prs [6:1..3]
#STATE#	(null) 
#STATE#	{ [6:5]
#STATE#	(prs-literal) [7:2..5]
#STATE#	( [7:6]
#STATE#	) [7:7]
in state #STATE#, possible rules are:
	mandatory_member_index_expr_list_in_parens : '(' . mandatory_member_index_expr_list ')'  (#RULE#)
acceptable tokens are: 
	ID (shift)
	SCOPE (shift)
