test/parser/prs/echo-02.hac
// "echo-02.hac"
// copy-modified from "echo-01.hac"
// should die: macros must have at least one argument

defproc echo(bool p, q, r, s, z) {
prs {
	echo()		// syntax death
	(p & q) | (r & s)	-> z-
	~((p & q) | (r & s))	-> z+
}
}

echo	E;
// E.p = E.r;

